samples/_failures_safe/1761077986_162029_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82f797fc.c: In function ‘main’:
./samples/SAFE/__tmp_82f797fc.c:206:23: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  206 |     int token_count = token
      |                       ^~~~~
      |                       Token
./samples/SAFE/__tmp_82f797fc.c:206:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_82f797fc.c:206:5: error: expected ‘,’ or ‘;’ at end of input
  206 |     int token_count = token
      |     ^~~
./samples/SAFE/__tmp_82f797fc.c:206:5: error: expected declaration or statement at end of input
